Warnung beim maven compile korrigiert (alle Annotationen auswerten)